--- a/WS03a/public/index.html
+++ b/WS03a/public/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>This is an example</h1>
+   <h1>This is the home page</h1>
+   <nav>
+        <a href="/about">About</a>
+        <a href="/services">Services</a>
+        <a href="/contact">Contact</a>
+        <a href="/list">List</a>
+        <a href="/json">JSON to HTML table</a>
+   </nav>
 </body>
 </html>
